[tool.poetry]
name = "archive_links"
version = "0.1.0"
description = "Convert all links in a document to archive.org permalinks"
authors = ["sneakers-the-rat <JLSaunders987@gmail.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
waybackpy = "^2.4.3"
tqdm = "^4.60.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
